--- a/semana06/src/app/feed/styles.css
+++ b/semana06/src/app/feed/styles.css
@@ -35,8 +35,8 @@
     line-height: 1.6;
 }
 .sidebar .profile span{
-    margin-top: 16px;
-    color: #fff;
+    margin-top: 15px;
+    color: #8d8d99;
     line-height: 1.6;
 }
 .main{
