--- a/semana07/src/app/feed/styles.css
+++ b/semana07/src/app/feed/styles.css
@@ -53,6 +53,24 @@
     align-items: center;
 }
 
+.button{
+    background-color: transparent;
+    color: #00875f;
+    border: 1px solid #00875f;
+    border-radius: 8px;
+    padding: 16px 24px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    margin-top: 16px;
+}
 
+.button:hover{
+    color: #fff;
+    background-color: #00875f;
+    cursor: pointer;
+}
 
 
