--- a/semana07/src/components/Post/styles.css
+++ b/semana07/src/components/Post/styles.css
@@ -49,15 +49,34 @@ time{
 }
 
 .form{
+    width: 100%;
     display: flex;
     flex-direction: column;
-    margin-top: 10px;
+    margin-top: 24px;
+    padding-top: 24px;
+    border-top: 1px solid #323238;
 }
 
-textarea{
-    background-color: #121214;
-    border: 1px solid #00875f;
-    border-radius: 16px;
-    padding: 10px;
-    margin-top: 24px;
+.form strong {
+    line-height: 1.6;
+    color: #e1e1e6;
+    font-size: 16px;
 }
+
+.form textarea{
+    width: 100%;
+    height: 80px;
+    background-color: #121214;
+    border:none;
+    border-radius: 8px;
+    padding: 16px;
+    margin-top: 24px;
+    line-height: 1.4;
+    color: #e1e1e6;
+    resize: none;
+}
+
+.form textarea:focus-within{
+    outline:2px solid #008750;
+}
+
