--- a/semana07/src/app/feed/styles.css
+++ b/semana07/src/app/feed/styles.css
@@ -5,6 +5,7 @@
     gap: 32px;
     padding: 32px 16px;
     margin: 0 auto;
+    background-color: #323238;
 }
 
 .sidebar {
@@ -53,7 +54,7 @@
     align-items: center;
 }
 
-.button{
+.button {
     background-color: transparent;
     color: #00875f;
     border: 1px solid #00875f;
@@ -67,10 +68,16 @@
     margin-top: 16px;
 }
 
-.button:hover{
+.button:hover {
     color: #fff;
     background-color: #00875f;
     cursor: pointer;
 }
 
-
+.form-post {
+    width: 100%;
+    background-color: #202024;
+    padding: 20px;
+    border-radius: 8px;
+    margin-bottom: 16px;
+}
